--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3000
-CONNECTION_STRING=mysql://root:sua_senha@localhost:3306/app_agendamento_db
+CONNECTION_STRING=mysql://root:sua_senha@localhost:3306/nome_banco_de_dados
