--- a/app-agendamento-UBS/package.json
+++ b/app-agendamento-UBS/package.json
@@ -15,6 +15,7 @@
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
+    "jsonwebtoken": "^9.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
