--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=3000
-CONNECTION_STRING=mysql://root:sua_senha@localhost:3306/nome_banco_de_dados
+CONNECTION_STRING=mysql://root:ric16500@localhost:3306/app_agendamento_db
+# JWT_SECRET=A6SFDD65a4f65sd1A1fas65f4AF1
