--- a/app-agendamento-UBS/package.json
+++ b/app-agendamento-UBS/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "expo": "~53.0.9",
+    "expo": "53.0.10",
     "expo-constants": "~17.1.6",
     "expo-linking": "~7.1.5",
     "expo-location": "~18.1.5",
@@ -19,10 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
     "zustand": "^5.0.5"
   },
